# fun_quiz

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NEXTJS_REPLICA_FUNCTION_DOC.md  README.md  drizzle.config.ts  tsconfig.json
backend/: .gitignore  app_config.toml  pyproject.toml  run.py
backend/app/: __init__.py  containers.py
backend/app/router/: backend_api_router.py  captcha_router.py  dept_router.py  invite_code_router.py  menu_router.py  organization_router.py  permission_router.py  quiz_play_router.py  quiz_router.py  quiz_token_router.py  role_router.py  storage_router.py  union_user_router.py  web_user_router.py
backend/basic/api_response/: api_response.py
backend/basic/entity/: basic_entity.py  transaction.py  transaction_log.py
backend/basic/error/: base_error.py
backend/basic/minio_client/: minio_client.py
backend/basic/model/: basic_model.py  fastapi_request_for_log_model.py  page_sort_model.py  pagination_model.py  transaction_log_model.py  transaction_model.py  tree_model.py
backend/basic/redis_client/: redis_client.py
backend/basic/repository/: base_repository.py  unit_of_work.py
backend/basic/utils/: auth_verify.py
backend/basic_module/: __init__.py  basic_module_container.py
backend/biz_module/: __init__.py  biz_module_container.py
backend/config/: .env.production.example  app_development_config.toml.example  app_production_config.toml.example  config.py  logging_config.py
backend/doc/: mime_types.json  sql.sql
backend/tests/: test_generate_data_table.py  test_generate_secret_key.py
doc/: doc.md  (+1 more)
(+417 files in other folders)
