[tool.poetry]
name = "biz_work_quantification"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pydantic = "^2.5.1"
pydantic_settings = "^2.1.0"
dependency-injector = "^4.41.0"
SQLAlchemy = "^2.0.23"
inflection = "^0.5.1"
minio = "^7.2.3"
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.0.3"
flake8 = "^7.0.0"
pytest = "^8.0.1"
celery = "^5.3.6"
toml = "^0.10.2"
fastapi = "^0.111.0"
openai = "^1.35.15"
# Common dependency
python-magic = { version = "^0.4.27", markers = "sys_platform != 'win32'" }
# For Windows-specific dependencies
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32'" }
redis = "^5.1.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pypinyin = "^0.53.0"
requests = "^2.32.3"
pillow = "^11.0.0"
psycopg2 = { version = "^2.9.10", markers = "sys_platform == 'win32'" }
psycopg2-binary = { version = "^2.9.10", markers = "sys_platform != 'win32'" }
cryptography = "^44.0.0"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
